# nsga_2_demo

./: .gitignore  README.md  pyproject.toml
notebooks/: nsga.ipynb
nsga_2/: algo.py
tasks/: __init__.py  gif.py
tests/: test_flatten_fronts.py  test_pareto_dominance.py  test_population.py
