[tool.poetry]
name = "nsga-2-demo"
version = "0.1.0"
description = ""
authors = ["Cameron <cameronwood858@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
matplotlib = "^3.10.1"
numpy = "^2.2.5"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
